# vr-voxel-space

./: .ccls  .gitattributes  .gitignore  .gitmodules  README.md  bake_assets  makefile  quest_build.sh  quest_install.sh  quest_start.sh  quest_stop.sh  run_desktop  run_quest
_reference/: quest_build.sh  quest_install.sh
desktop/: CMakeLists.txt  main.c  vr.h
glad/: glad.c  glad.h
maps/: C10W.png.astc  C10W.png1.astc  C10W.png10.astc  C10W.png2.astc  C10W.png3.astc  C10W.png4.astc  C10W.png5.astc  C10W.png6.astc  C10W.png7.astc  C10W.png8.astc  C10W.png9.astc  C11W.png.astc  C11W.png1.astc  C11W.png10.astc  C11W.png2.astc  C11W.png3.astc  C11W.png4.astc  C11W.png5.astc  C11W.png6.astc  C11W.png7.astc  C11W.png8.astc  C11W.png9.astc  C12W.png.astc  C12W.png1.astc  C12W.png10.astc  C12W.png2.astc  C12W.png3.astc  C12W.png4.astc  C12W.png5.astc  C12W.png6.astc  C12W.png7.astc  C12W.png8.astc  C12W.png9.astc  C13.png.astc  C13.png1.astc  C13.png10.astc  C13.png2.astc  C13.png3.astc  C13.png4.astc  C13.png5.astc  (+289 more)
quest/: CMakeLists.txt  extensions.txt
quest/src/main/: AndroidManifest.xml
quest/src/main/cpp/: android_fopen.c  android_native_app_glue.c  hello_quest.c  quest_main.c
quest/src/main/java/com/wessing/vr_voxel_space/: MainActivity.java
src/: culling.c  culling.h  file.c  file.h  game.c  game.h  game_gl.h  image.c  image.h  main.c  platform.h  raycasting.c  raycasting.h  shader.c  shader.h  types.h  util.c  util.h  vr.c
src/es_shaders/: blit.frag  get_color.frag  model_view.vert  to_screen_space.vert
src/glad/: glad.c  glad.h
src/shaders/: blit.frag  get_color.frag  hand.frag  hand.vert  model_view.vert  to_screen_space.vert
texture_encoder/: CMakeLists.txt  main.cpp
